@startuml 

skinparam classAttributeIconSize 0


class Holerite {
    - funcionario: Funcionario
    - totalProventos: BigDecimal
    - totalDescontos: BigDecimal
    - salarioLiquido: BigDecimal
}

interface RegraDeCalculo <<interface>> {
    + calcular(funcionario: Funcionario, diasUteis: int, diasTrabalho: int): BigDecimal
}

class ProcessadorDeFolha {
    - regrasDeProvento: List<RegraDeCalculo>
    - regrasDeDesconto: List<RegraDeCalculo>
    + processar(funcionario: Funcionario, diasUteis: int, diasTrabalho: int): Holerite
}

class FaixaINSS {
    - valorMinimo: BigDecimal
    - valorMaximo: BigDecimal
    - aliquota: BigDecimal
    - parcelaADeduzir: BigDecimal
}

class CalculadoraHoraExtra {
    - percentualAcrescimo: BigDecimal
    - divisor: BigDecimal
    - ehCemPorcento: boolean
    + calcular(funcionario: Funcionario, diasUteis: int, diasTrabalho: int): BigDecimal
}

class CalculadoraINSS {
    - tabelaINSS: List<FaixaINSS>
    - tetoMaximoDesconto: BigDecimal
    + calcular(funcionario: Funcionario, diasUteis: int, diasTrabalho: int): BigDecimal
}

class CalculadoraSalarioProporcional {
    + calcular(funcionario: Funcionario, diasUteis: int, diasTrabalho: int): BigDecimal
}


RegraDeCalculo <|.. CalculadoraHoraExtra : implements
RegraDeCalculo <|.. CalculadoraINSS : implements
RegraDeCalculo <|.. CalculadoraSalarioProporcional : implements

@enduml